tests/test_files_pa3/external/errors/LocalVarShadowsParamError.ic

class A {
	
	static void main(string[] args){}
	
	//Shadowing method parameters with local variables is illegal.
	void foo(int x) {
		int x = 1;
	}

}